fix: player height, autoplay on mobile

--- a/docroot/sites/usanetwork/themes/aurora_usa/sass/design/modules/_consumptionator-video.scss
+++ b/docroot/sites/usanetwork/themes/aurora_usa/sass/design/modules/_consumptionator-video.scss
@@ -98,7 +98,7 @@
     position: relative;
     width: 100%;
     @include breakpoint($bp-min-1281-width) {
-      //height: 42.01875vw;
+      //max-height: 42.01875vw;
       max-height: 1093.75px;
       max-width: 2500px;
       margin: 0 auto;
@@ -108,7 +108,7 @@
     }
     .player-wrapper {
       float: left;
-      height: 100%;
+      height: auto;
       position: relative;
       width: 74.7%;
       @include breakpoint($between-1025-1280) {
@@ -116,11 +116,11 @@
         z-index: 1;
       }
       @include breakpoint($bp-1024-width) {
-        //height: 56.25vw;
+        //max-height: 56.25vw;
         width: 100%;
       }
       @include breakpoint($bp-480-width) {
-        //height: 50vw;
+        //max-height: 50vw;
       }
 
       &:hover {
@@ -133,7 +133,7 @@
       }
 
       > .node {
-        height: 100%;
+        //height: 100%;
         width: 100%;
       }
 
